2009-10-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Increase C99 compatibility.
	
	* tools/bin/cce.in: Append `-std=gnu99' when compiling C
	natively. (reported by A. Matei)

2009-10-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance `slr', most notably to set up gfx output.

	The following options are introduced: `-X' enable graphics, `-Xr'
	set refresh rate, `-Xs' set scaling factors, `-Xd' set output
	dimensions.
	
	* tools/bin/slr.in: Add support for the new options. Document
	them.

	* tools/lib/r-mtalpha-sim.sh.in,	
	* tools/lib/r-mtsparc-sim.sh.in: Use the `gfx' version of the	
	simulator where needed. Also enhance to use the `dbg' version when
	-g is given to `slr'.
	
2009-10-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce performance counters and C99's clock().

	* lib/include/ctime.h,
	* lib/src/mtclock.c: New.

	* lib/include/svp/perf.h: Deprecate `get_cycles()' in favor of
	`clock()'.

	* lib/include/svp/perf.h,
	* lib/src/perf.c: Implement the API described in note [sl8].

	* lib/Makefile.am,
	* lib/seqc.mk,
	* lib/ptl.mk,
	* lib/mtalpha.mk: List the new files.
	
2009-09-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce a default architecture configuration with many places.
	
	* tools/bin/slr.in: Change documentation for `-n'. Force default
	to many places of varying sizes.

	* tools/bin/slt.in: Update documentation to remove uses of `-n'.

	* build-aux/slctests.mk: Do not use `-n' any more. Programs can
	request multiple tests via SLT_RUN in the source code.
	
2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix support for C99's float.h.

	* lib/include/bits/float.h: New. 
	* lib/Makefile.am: Update accordingly.

2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix build of demos that require the math library.
	
	* build-aux/sl.mk: Compile to MT alpha with `-lm' always, so that
	demo code does not need to sort out when it is needed and not.

2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>
